--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,15 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-3",
+      "react"
+    ],
+    "plugins": [
+    ]
+  },
   "dependencies": {
     "history": "^4.7.2",
     "moment": "^2.19.1",
@@ -22,5 +31,39 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-jest": "^21.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "fetch-mock": "^5.13.1",
+    "jest": "^21.2.1",
+    "jest-fetch-mock": "^1.2.1",
+    "react-scripts": "1.0.11",
+    "react-test-renderer": "^16.0.0",
+    "redux-mock-store": "^1.3.0",
+    "regenerator-runtime": "^0.11.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!src/index.js",
+      "!src/setupTests.js",
+      "!src/registerServiceWorker.js",
+      "!<rootDir>/node_modules/",
+      "!<rootDir>/path/to/dir/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 90,
+        "lines": 90,
+        "statements": 90
+      }
+    }
   }
 }
