--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,9 @@
   "babel": {
     "presets": [
       "es2015",
-      "stage-3",
       "react"
     ],
-    "plugins": [
-    ]
+    "plugins": []
   },
   "dependencies": {
     "history": "^4.7.2",
@@ -34,35 +32,39 @@
   },
   "devDependencies": {
     "babel-jest": "^21.2.0",
+    "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "fetch-mock": "^5.13.1",
     "jest": "^21.2.1",
     "jest-fetch-mock": "^1.2.1",
+    "jest-mock-now": "^1.1.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-scripts": "1.0.11",
     "react-test-renderer": "^16.0.0",
     "redux-mock-store": "^1.3.0",
-    "regenerator-runtime": "^0.11.0"
+    "regenerator-runtime": "^0.11.0",
+    "sinon": "^4.0.2"
   },
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!src/index.js",
       "!src/setupTests.js",
+      "!src/utils/UtilsAPI.js",
+      "!src/reducers/RootReducer.js",
       "!src/registerServiceWorker.js",
       "!<rootDir>/node_modules/",
       "!<rootDir>/path/to/dir/"
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 90,
-        "functions": 90,
-        "lines": 90,
-        "statements": 90
+        "branches": 70,
+        "functions": 70,
+        "lines": 70,
+        "statements": 70
       }
     }
   }
